REOPENED165659
CrashTracer: com.apple.WebKit.Networking at WTF::ThreadSafeRefCounted<WebKit::NetworkCache::IOChannel>::deref
https://bugs.webkit.org/show_bug.cgi?id=165659
Summary CrashTracer: com.apple.WebKit.Networking at WTF::ThreadSafeRefCounted<WebKit:...
Antti Koivisto
Reported 2016-12-09 10:01:04 PST
Some crashes of this type have been seen: 25 libdispatch.dylib: _dispatch_try_lock_transfer_or_wakeup 25 libdispatch.dylib: _dispatch_io_dispose 39 libdispatch.dylib: _dispatch_io_dispose 40 libdispatch.dylib: _dispatch_dispose ==> 40 WebKit: WTF::ThreadSafeRefCounted<WebKit::NetworkCache::IOChannel>::deref() <== | 27 libsystem_blocks.dylib: _Block_release | | 27 libsystem_blocks.dylib: _Block_release | | 24 libdispatch.dylib: _dispatch_client_callout | | | 24 libdispatch.dylib: _dispatch_continuation_pop | | | 24 libdispatch.dylib: _dispatch_async_redirect_invoke | | | 24 libdispatch.dylib: _dispatch_root_queue_drain | | | 24 libdispatch.dylib: _dispatch_worker_thread3 | | | 24 libsystem_pthread.dylib: _pthread_wqthread | | | 24 libsystem_pthread.dylib: | | pruning: 2 libdispatch.dylib: _dispatch_continuation_pop | | pruning: 1 libdispatch.dylib: _dispatch_queue_serial_drain | 13 WebKit: std::__1::__function::__func<WebKit::NetworkCache::Storage::dispatchReadOperation(std::__1::unique_ptr<WebKit::NetworkCache::Storage::ReadOperation, std::__1::default_delete<WebKit::NetworkCache::Storage::ReadOperation> >)::$_6, std::__1::allocator<WebKit::NetworkCache::Storage::dispatchReadOperation(std::__1::unique_ptr<WebKit::NetworkCache::Storage::ReadOperation, std::__1::default_delete<WebKit::NetworkCache::Storage::ReadOperation> >)::$_6>, void ()>::operator()() | 13 JavaScriptCore: ___ZN3WTF9WorkQueue8dispatchENSt3__18functionIFvvEEE_block_invoke | 13 libdispatch.dylib: _dispatch_call_block_and_release | pruning: 9 libdispatch.dylib: _dispatch_client_callout | pruning: 4 libdispatch.dylib: _dispatch_continuation_pop ==> 10 libdispatch.dylib: _dispatch_dispose <== 10 WebKit: WTF::ThreadSafeRefCounted<WebKit::NetworkCache::IOChannel>::deref() pruning: 6 libsystem_blocks.dylib: _Block_release pruning: 4 WebKit: std::__1::__function::__func<WebKit::NetworkCache::Storage::dispatchReadOperation(std::__1::unique_ptr<WebKit::NetworkCache::Storage::ReadOperation, std::__1::default_delete<WebKit::NetworkCache::Storage::ReadOperation> >)::$_6, std::__1::allocator<WebKit::NetworkCache::Storage::dispatchReadOperation(std::__1::unique_ptr<WebKit::NetworkCache::Storage::ReadOperation, std::__1::default_delete<WebKit::NetworkCache::Storage::ReadOperation> >)::$_6>, void ()>::operator()()
Attachments
add a release assert (2.85 KB, patch)
2016-12-09 10:23 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2016-12-09 10:01:20 PST
Antti Koivisto
Comment 2 2016-12-09 10:23:01 PST
Created attachment 296659 [details] add a release assert
Darin Adler
Comment 3 2016-12-09 21:24:36 PST
Comment on attachment 296659 [details] add a release assert OK, hope this works!
WebKit Commit Bot
Comment 4 2016-12-10 02:01:04 PST
Comment on attachment 296659 [details] add a release assert Clearing flags on attachment: 296659 Committed r209660: <http://trac.webkit.org/changeset/209660>
WebKit Commit Bot
Comment 5 2016-12-10 02:01:09 PST
All reviewed patches have been landed. Closing bug.
Antti Koivisto
Comment 6 2016-12-10 03:29:39 PST
Not a fix.
Note You need to log in before you can comment on or make changes to this bug.