CrashTracer: com.apple.WebKit.Networking at WTF::ThreadSafeRefCounted<WebKit::NetworkCache::IOChannel>::deref https://bugs.webkit.org/show_bug.cgi?id=165659 <rdar://problem/27077977>

Reviewed by Darin Adler.

* NetworkProcess/cache/NetworkCacheIOChannel.h:
* NetworkProcess/cache/NetworkCacheIOChannelCocoa.mm:
(WebKit::NetworkCache::IOChannel::~IOChannel):

    Add non-inlined destructor and release assert against double deletion to narrow down this crash.


Canonical link: https://commits.webkit.org/183316@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209660 268f45cc-cd09-0410-ab3c-d52691b4dbfc