Source/WebKit2/NetworkProcess/cache/NetworkCacheIOChannel.h
@@ -56,6 +56,8 @@ public:
 
     int fileDescriptor() const { return m_fileDescriptor; }
 
+    ~IOChannel();
+
 private:
     IOChannel(const String& filePath, IOChannel::Type);
 
@@ -67,6 +69,7 @@ private:
     Type m_type;
 
     int m_fileDescriptor { 0 };
+    std::atomic<bool> m_wasDeleted { false }; // Try to narrow down a crash, https://bugs.webkit.org/show_bug.cgi?id=165659
 #if PLATFORM(COCOA)
     DispatchPtr<dispatch_io_t> m_dispatchIO;
 #endif
